unchangable list fix